# rosa-channel-service

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: get_start.md  stacks  stacks.md
src/rosa_channel_service/: __init__.py  main.py
tests/: test_health.py
