[project]
name = "rosa-channel-service"
version = "0.1.0"
description = "Serviço base em FastAPI para o Rosa Channel Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pre-commit>=3.8.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
